# idnkit

./: .gitignore  BUILD.gn  README.md
idnkit/: ChangeLog  ChangeLog-1.x  INSTALL  INSTALL.ja  Makefile.am  Makefile.in  NEWS  README  README.ja  UPDATE-TABLES  configure  configure.ac
idnkit/conf/: Makefile.am  Makefile.in  idn2.conf.sample.in  idnlang.conf.windows
idnkit/data/: Makefile.am  Makefile.in  idna-tables.xml  iso639.txt  windows-lcid.txt
idnkit/include/: Makefile.am  Makefile.in  config.h  config.h.in  platform.h
idnkit/include/idn/: api.h  assert.h  ctxrule.h  debug.h  delimitermap.h  encodingalias.h  export.h  foreignmap.h  foreignset.h  labellist.h  lang.h  langalias.h  langlocalmap.h  localconverter.h  localencoding.h  log.h  logmacro.h  lowercasemap.h  maplist.h  normalizer.h  punycode.h  res.h  res_internal.h  resconf.h  resconf_internal.h  result.h  strhash32.h  strhash8.h  tldlocalmap.h  tr46check.h  tr46map.h  utf32.h  utf8.h  util.h  version.h  version.h.in  widthmap.h
idnkit/lib/: Makefile.am  Makefile.in  api.c  ctxrule.c  debug.c  delimitermap.c  encodingalias.c  foreignmap.c  foreignset.c  labellist.c  lang.c  langalias.c  langlocalmap.c  localconverter.c  localencoding.c  log.c  lowercasemap.c  maplist.c  normalizer.c  punycode.c  res.c  res_asclower.c  res_bidicheck.c  res_combcheck.c  res_ctxjcheck.c  res_ctxocheck.c  res_hyphcheck.c  res_idnconv_decode.c  res_idnconv_encode.c  res_joinlabels.c  res_lencheck.c  res_localcheck.c  res_localconv.c  res_map.c  res_nfccheck.c  res_prefcheck.c  res_prohcheck.c  res_rtcheck_decode.c  res_rtcheck_encode.c  res_unascheck.c  (+17 more)
idnkit/lib/auto/: bidiclass.c  cased.c  caseignorable.c  combiningcharacter.c  combiningclass.c  composition.c  decomposition.c  idnacategory.c  iso639lang.c  joiningtype.c  lowercase.c  script.c  tr46casefold.c  tr46category.c  width.c
idnkit/man/: Makefile.am  Makefile.in  idn2.conf.5.in  idn_checkname.3  idn_comparenames.3  idn_decodename.3  idn_encodename.3  idn_nameinit.3  idn_result_tostring.3  idn_setlanguage.3  idn_setlocalcheckfile.3  idn_setlocalencoding.3  idn_version_getstring.3  idnalias.conf.5.in  idncheck.1.in  idncmp.1.in  idnconv2.1.in  idnlang.conf.5.in  libidnkit.3
idnkit/map/: Makefile.am  Makefile.in  ja.map  tr.map
idnkit/patch/: idnkit-1.0fix.patch
idnkit/test/: Makefile.am  Makefile.in  TEST  no_test_support.sh
idnkit/test/api/: Makefile.am  Makefile.in  api.def  api_0001.sh  api_0002.sh  api_0003.sh  api_0004.sh  api_0005.sh  api_0006.sh  api_0007.sh  api_0008.sh  api_0009.sh  api_0010.sh  api_0011.sh  api_0012.sh  test_api_checkname.c  test_api_comparenames.c  test_api_comparenames2.c  test_api_decodename.c  test_api_decodename2.c  test_api_enable.c  test_api_encodename.c  test_api_nameinit0.c  test_api_nameinit1.c
idnkit/test/asclower/: Makefile.am  Makefile.in  asclower.def  asclower_0001.sh  asclower_0002.sh  asclower_0003.sh  asclower_0004.sh  asclower_0005.sh  asclower_0006.sh  asclower_0007.sh  asclower_0008.sh  asclower_0009.sh  asclower_0010.sh  asclower_0011.sh
idnkit/test/auto/: Makefile.am  Makefile.in  gen_bidiclass_exp.pl  gen_bidiclass_out.c  gen_cased_exp.pl  gen_cased_out.c  gen_caseignorable_exp.pl  gen_caseignorable_out.c  gen_combiningcharacter_exp.pl  gen_combiningcharacter_out.c  gen_combiningclass_exp.pl  gen_combiningclass_out.c  gen_decomposition_exp.pl  gen_decomposition_out.c  gen_idnacategory_exp.pl  gen_idnacategory_out.c  gen_joiningtype_exp.pl  gen_joiningtype_out.c  gen_lowercase_exp.pl  gen_lowercase_out.c  gen_script_exp.pl  gen_script_out.c  gen_tr46casefold_exp.pl  gen_tr46casefold_out.c  gen_tr46category_exp.pl  gen_tr46category_out.c  gen_width_exp.pl  gen_width_out.c  test_bidiclass.sh  test_cased.sh  test_caseignorable.sh  test_combiningcharacter.sh  test_combiningclass.sh  test_decomposition.sh  test_idnacategory.sh  test_joiningtype.sh  test_lowercase.sh  test_script.sh  test_tr46casefold.sh  test_tr46category.sh  (+1 more)
idnkit/test/bidicheck/: Makefile.am  Makefile.in  bidicheck.def  bidicheck_0001.sh  bidicheck_0002.sh  bidicheck_0003.sh  bidicheck_0004.sh  bidicheck_0005.sh  bidicheck_0006.sh  bidicheck_0007.sh  bidicheck_0008.sh  bidicheck_0009.sh  bidicheck_0010.sh  bidicheck_0011.sh  bidicheck_0012.sh  bidicheck_0013.sh  bidicheck_0014.sh  bidicheck_0015.sh  bidicheck_0016.sh  bidicheck_0017.sh  bidicheck_0018.sh  bidicheck_0019.sh  bidicheck_0020.sh  bidicheck_0021.sh  bidicheck_0022.sh  bidicheck_0023.sh  bidicheck_0024.sh  bidicheck_0025.sh  bidicheck_0026.sh  bidicheck_0027.sh  bidicheck_0028.sh  bidicheck_0029.sh  bidicheck_0030.sh  bidicheck_0031.sh  bidicheck_0032.sh  bidicheck_0033.sh  bidicheck_0034.sh  bidicheck_0035.sh  bidicheck_0036.sh  bidicheck_0037.sh  (+106 more)
idnkit/test/checkname/: Makefile.am  Makefile.in  checkname.def  checkname_0001.sh  checkname_0002.sh  checkname_0003.sh  checkname_0004.sh  checkname_0005.sh
idnkit/test/combcheck/: Makefile.am  Makefile.in  combcheck.def  combcheck_0001.sh  combcheck_0002.sh  combcheck_0003.sh  combcheck_0004.sh  combcheck_0005.sh  combcheck_0006.sh  combcheck_0007.sh  combcheck_0008.sh  combcheck_0009.sh  combcheck_0010.sh  combcheck_0011.sh  combcheck_0012.sh  combcheck_0013.sh  combcheck_0014.sh  combcheck_0015.sh  combcheck_0016.sh  combcheck_0017.sh  combcheck_0018.sh  combcheck_0019.sh  combcheck_0020.sh  (+42 more)
idnkit/util/: CprogHash.pm  CprogList.pm  IDNATables.pm  ISO639Tables.pm  Makefile.am  Makefile.in  SparseMap.pm  TR46Tables.pm  UCD.pm  WindowsLCIDTables.pm  generate_bidiclass.pl  generate_cased.pl  generate_caseignorable.pl  generate_combiningcharacter.pl  generate_combiningclass.pl  generate_common.pl  generate_composition.pl  generate_decomposition.pl  generate_idnaall.sh  generate_idnacategory.pl  generate_idnalias.sh  generate_idnaversion.pl  generate_iso639lang.pl  generate_joiningtype.pl  generate_lowercase.pl  generate_script.pl  generate_test.pl  generate_testall.sh  generate_testam.pl  generate_tr46casefold.pl  generate_tr46category.pl  generate_unicodeall.sh  generate_unicodeversion.pl  generate_width.pl  generate_windowslang.pl
(+1240 files in other folders)
