# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("idnkit_config") {
    if  (is_win) {
#        cflags = [ "/WX-" ]
    }
    include_dirs = [ 
        "idnkit/include",
    ]
}

static_library("idnkit") {

  configs += [ ":idnkit_config" ]
  
  
  sources = [
    "idnkit\include\config.h",
    "idnkit\include\platform.h",
    "idnkit\include\idn\api.h",
    "idnkit\include\idn\assert.h",
    "idnkit\include\idn\ctxrule.h",
    "idnkit\include\idn\debug.h",
    "idnkit\include\idn\delimitermap.h",
    "idnkit\include\idn\encodingalias.h",
    "idnkit\include\idn\export.h",
    "idnkit\include\idn\foreignmap.h",
    "idnkit\include\idn\foreignset.h",
    "idnkit\include\idn\labellist.h",
    "idnkit\include\idn\lang.h",
    "idnkit\include\idn\langalias.h",
    "idnkit\include\idn\langlocalmap.h",
    "idnkit\include\idn\localconverter.h",
    "idnkit\include\idn\localencoding.h",
    "idnkit\include\idn\log.h",
    "idnkit\include\idn\logmacro.h",
    "idnkit\include\idn\lowercasemap.h",
    "idnkit\include\idn\maplist.h",
    "idnkit\include\idn\normalizer.h",
    "idnkit\include\idn\punycode.h",
    "idnkit\include\idn\res.h",
    "idnkit\include\idn\res_internal.h",
    "idnkit\include\idn\resconf.h",
    "idnkit\include\idn\resconf_internal.h",
    "idnkit\include\idn\result.h",
    "idnkit\include\idn\strhash8.h",
    "idnkit\include\idn\strhash32.h",
    "idnkit\include\idn\tldlocalmap.h",
    "idnkit\include\idn\tr46check.h",
    "idnkit\include\idn\tr46map.h",
    "idnkit\include\idn\utf8.h",
    "idnkit\include\idn\utf32.h",
    "idnkit\include\idn\util.h",
    "idnkit\include\idn\version.h",
    "idnkit\include\idn\widthmap.h",
    "idnkit\include\idn\auto\bidiclass.h",
    "idnkit\include\idn\auto\cased.h",
    "idnkit\include\idn\auto\caseignorable.h",
    "idnkit\include\idn\auto\combiningcharacter.h",
    "idnkit\include\idn\auto\combiningclass.h",
    "idnkit\include\idn\auto\composition.h",
    "idnkit\include\idn\auto\decomposition.h",
    "idnkit\include\idn\auto\idnacategory.h",
    "idnkit\include\idn\auto\idnaversion.h",
    "idnkit\include\idn\auto\iso639lang.h",
    "idnkit\include\idn\auto\joiningtype.h",
    "idnkit\include\idn\auto\lowercase.h",
    "idnkit\include\idn\auto\script.h",
    "idnkit\include\idn\auto\tr46casefold.h",
    "idnkit\include\idn\auto\tr46category.h",
    "idnkit\include\idn\auto\unicodeversion.h",
    "idnkit\include\idn\auto\width.h",
    "idnkit\lib\api.c",
    "idnkit\lib\ctxrule.c",
    "idnkit\lib\debug.c",
    "idnkit\lib\delimitermap.c",
    "idnkit\lib\encodingalias.c",
    "idnkit\lib\foreignmap.c",
    "idnkit\lib\foreignset.c",
    "idnkit\lib\labellist.c",
    "idnkit\lib\lang.c",
    "idnkit\lib\langalias.c",
    "idnkit\lib\langlocalmap.c",
    "idnkit\lib\localconverter.c",
    "idnkit\lib\localencoding.c",
    "idnkit\lib\log.c",
    "idnkit\lib\lowercasemap.c",
    "idnkit\lib\maplist.c",
    "idnkit\lib\normalizer.c",
    "idnkit\lib\punycode.c",
    "idnkit\lib\res.c",
    "idnkit\lib\res_asclower.c",
    "idnkit\lib\res_bidicheck.c",
    "idnkit\lib\res_combcheck.c",
    "idnkit\lib\res_ctxjcheck.c",
    "idnkit\lib\res_ctxocheck.c",
    "idnkit\lib\res_hyphcheck.c",
    "idnkit\lib\res_idnconv_decode.c",
    "idnkit\lib\res_idnconv_encode.c",
    "idnkit\lib\res_joinlabels.c",
    "idnkit\lib\res_lencheck.c",
    "idnkit\lib\res_localcheck.c",
    "idnkit\lib\res_localconv.c",
    "idnkit\lib\res_map.c",
    "idnkit\lib\res_nfccheck.c",
    "idnkit\lib\res_prefcheck.c",
    "idnkit\lib\res_prohcheck.c",
    "idnkit\lib\res_rtcheck_decode.c",
    "idnkit\lib\res_rtcheck_encode.c",
    "idnkit\lib\res_unascheck.c",
    "idnkit\lib\res_unicodeconv.c",
    "idnkit\lib\res_utf8toutf32.c",
    "idnkit\lib\res_utf32toutf8.c",
    "idnkit\lib\resconf.c",
    "idnkit\lib\result.c",
    "idnkit\lib\strhash8.c",
    "idnkit\lib\strhash32.c",
    "idnkit\lib\tldlocalmap.c",
    "idnkit\lib\tr46check.c",
    "idnkit\lib\tr46map.c",
    "idnkit\lib\utf8.c",
    "idnkit\lib\utf32.c",
    "idnkit\lib\util.c",
    "idnkit\lib\version.c",
    "idnkit\lib\widthmap.c",
    "idnkit\lib\util_winuwp.cpp",
    "idnkit\lib\auto\bidiclass.c",
    "idnkit\lib\auto\cased.c",
    "idnkit\lib\auto\caseignorable.c",
    "idnkit\lib\auto\combiningcharacter.c",
    "idnkit\lib\auto\combiningclass.c",
    "idnkit\lib\auto\composition.c",
    "idnkit\lib\auto\decomposition.c",
    "idnkit\lib\auto\idnacategory.c",
    "idnkit\lib\auto\iso639lang.c",
    "idnkit\lib\auto\joiningtype.c",
    "idnkit\lib\auto\lowercase.c",
    "idnkit\lib\auto\script.c",
    "idnkit\lib\auto\tr46casefold.c",
    "idnkit\lib\auto\tr46category.c",
    "idnkit\lib\auto\width.c",
  ]

  defines = [
    "_LIB",
    "LIBIDNKITLITE",
    "_UNICODE",
    "UNICODE",
  ]

  if  (is_winuwp) {
    defines += [ "IDNKIT_WINUWP" ]
  }

}
