SUBDIRS = \
	common \
	api \
	asclower \
	auto \
	bidicheck \
	checkname \
	combcheck \
	command \
	comparenames \
	ctxjcheck \
	ctxocheck \
	decodename \
	delimitermap \
	encodename \
	hyphcheck \
	idnconv \
	language \
	languagelocal \
	lencheck \
	libidnkitlite \
	loadconf \
	localcheck \
	localconv \
	localencoding \
	lowercase \
	map \
	misc \
	nfc \
	nfccheck \
	nfkc \
	normalization \
	overflow \
	prefcheck \
	prohcheck \
	result \
	rtcheck \
	rtconv \
	tldlocal \
	tr46check \
	tr46map \
	unascheck \
	undoiferr \
	unicodeconv \
	utf8 \
	version \
	width

EXTRA_DIST = \
	TEST \
	no_test_support.sh
