EXTRA_DIST = \
	CprogHash.pm \
	CprogList.pm \
	IDNATables.pm \
	ISO639Tables.pm \
	SparseMap.pm \
	TR46Tables.pm \
	UCD.pm \
	WindowsLCIDTables.pm \
	generate_bidiclass.pl \
	generate_cased.pl \
	generate_caseignorable.pl \
	generate_combiningcharacter.pl \
	generate_combiningclass.pl \
	generate_common.pl \
	generate_composition.pl \
	generate_decomposition.pl \
	generate_idnaall.sh \
	generate_idnacategory.pl \
	generate_idnalias.sh \
	generate_idnaversion.pl \
	generate_iso639lang.pl \
	generate_joiningtype.pl \
	generate_lowercase.pl \
	generate_script.pl \
	generate_test.pl \
	generate_testall.sh \
	generate_testam.pl \
	generate_tr46category.pl \
	generate_tr46casefold.pl \
	generate_unicodeall.sh \
	generate_unicodeversion.pl \
	generate_width.pl \
	generate_windowslang.pl
